<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dingu.smartcradle.CradleMonitoring">

    <Button
        android:id="@+id/select_song_button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/play_lullaby"
        android:textColor="@color/white_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorOnOFFStatus" />

    <TextView
        android:id="@+id/baby_cry_status"
        android:layout_width="356dp"
        android:layout_height="70dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_bg"
        android:paddingTop="10dp"
        android:text="@string/baby_no_cry"
        android:textAlignment="center"
        android:textColor="@color/positive"
        android:textSize="@dimen/text_size"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/wet_bed_status"
        android:layout_width="356dp"
        android:layout_height="70dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border_bg"
        android:paddingTop="10dp"
        android:text="@string/no_wet_bed"
        android:textAlignment="center"
        android:textColor="@color/positive"
        android:textSize="@dimen/text_size"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baby_cry_status" />

    <Button
        android:id="@+id/camera_connect"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/camera_connect"
        android:textColor="@color/white_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_song_button" />

    <TextView
        android:id="@+id/sensorOnOFFStatus"
        android:layout_width="356dp"
        android:layout_height="160dp"
        android:layout_marginBottom="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_bg_2"
        android:text="@string/sensors_on_off"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/select_song_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wet_bed_status" />
</android.support.constraint.ConstraintLayout>
